--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "angular-mocks": "^1.4.0"
   },
-  "appPath": "app",
+  "appPath": "public",
   "moduleName": "teachersHelper2App",
   "overrides": {
     "bootstrap": {
